--- a/src/modules/home/presentation/pages/Home/styles.module.scss
+++ b/src/modules/home/presentation/pages/Home/styles.module.scss
@@ -1,6 +1,7 @@
 main {
   padding: 20px;
   box-sizing: border-box;
+  min-height: calc(100vh - 11rem);
 
   .sort {
     display: flex;
@@ -18,8 +19,28 @@ main {
   }
 
   .articles {
-    .most_liked {
+    display: flex;
+    justify-content: space-between;
+    align-items: stretch;
+    gap: 20px;
+    margin-top: 20px;
+
+    .boxes {
+      flex-basis: 75%;
       display: grid;
+      gap: 30px 20px;
+      grid-template-columns: repeat(3, 1fr);
+      grid-template-rows: repeat(2, 1fr);
+
+    }
+
+    .most_liked {
+      flex-basis: 25%;
+
+      h2 {
+        color: var(--main);
+
+      }
 
     }
   }
