--- a/src/modules/home/presentation/pages/Home/styles.module.scss
+++ b/src/modules/home/presentation/pages/Home/styles.module.scss
@@ -1,4 +1,5 @@
 main {
+  max-width: 1920px;
   padding: 20px;
   box-sizing: border-box;
   min-height: calc(100vh - 11rem);
@@ -58,7 +59,6 @@ main {
 
       h2 {
         color: var(--main);
-
       }
     }
   }
