login screen design

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -2,6 +2,7 @@
   --background: #fff;
   --background-element: #fff;
   --background-line: #c0c0c0;
+  --background-light: #e5e5e5;
   --main: #3e72f6;
   --darkMain: #1e5eff;
 }
