--- a/src/modules/home/presentation/pages/Home/styles.module.scss
+++ b/src/modules/home/presentation/pages/Home/styles.module.scss
@@ -36,6 +36,11 @@ main {
       gap: 30px 20px;
       grid-template-columns: repeat(3, 1fr);
 
+      .skeleton {
+        width: 100%;
+        height: 100%;
+      }
+
       @media only screen and (max-width: 68rem) {
         flex-basis: 60%;
         grid-template-columns: repeat(2, 1fr);
@@ -48,6 +53,12 @@ main {
 
     .most_liked {
       flex-basis: 25%;
+
+      .skeleton {
+        height: 4rem;
+        margin-bottom: 0.5rem;
+        width: 100%;
+      }
 
       @media only screen and (max-width: 68rem) {
         flex-basis: 40%;
