search view updated

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,5 +1,5 @@
 :root {
-  --background: #fff;
+  --background: #fafafa;
   --background-element: #fff;
   --background-line: #c0c0c0;
   --background-light: #e5e5e5;
