--- a/src/shared/presentation/components/NavComponent/styles.module.scss
+++ b/src/shared/presentation/components/NavComponent/styles.module.scss
@@ -10,6 +10,7 @@
   padding: 0 20px;
   box-sizing: border-box;
   border-bottom: 1px solid var(--background-line);
+  background-color: var(--background-element);
 
   .buttons_wrapper {
     a {
@@ -85,7 +86,7 @@
   box-sizing: border-box;
   border-bottom: 1px solid var(--background-line);
   border-top: 1px solid var(--background-line);
-
+  background-color: var(--background-element);
 
   div {
     display: flex;
