--- a/src/_mixins.scss
+++ b/src/_mixins.scss
@@ -3,8 +3,8 @@
   font-family: 'Oswald', sans-serif;
   background-color: transparent;
   border-radius: 10px;
-  font-size: 16px;
-  padding: 3px 7px;
+  font-size: 0.9rem;
+  padding: 0.25rem 0.4rem;
   box-sizing: border-box;
   color: var(--main);
   cursor: pointer;
