--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -7,3 +7,15 @@
   --darkMain: #1e5eff;
   --text: #000;
 }
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --background: #0e0e0e;
+    --background-element: #000000;
+    --background-line: #c0c0c0;
+    --background-light: #2c2c2c;
+    --main: #3e72f6;
+    --darkMain: #1e5eff;
+    --text: #ffffff;
+  }
+}
