--- a/src/modules/home/presentation/pages/Home/styles.module.scss
+++ b/src/modules/home/presentation/pages/Home/styles.module.scss
@@ -38,7 +38,7 @@ main {
 
       .skeleton {
         width: 100%;
-        height: 100%;
+        height: 22rem;
       }
 
       @media only screen and (max-width: 68rem) {
