--- a/src/shared/presentation/components/SearchArticle/styles.module.scss
+++ b/src/shared/presentation/components/SearchArticle/styles.module.scss
@@ -1,18 +1,15 @@
 .box {
-  overflow: hidden;
+  display: flex;
+  margin-bottom: 0.4rem;
 
   .image {
-    width: 100%;
-    height: 20rem;
+    width: 4rem;
+    height: inherit;
     background-repeat: no-repeat;
     background-size: cover;
   }
 
-  div {
-    h3 {
-
-    }
-
+  .info {
     p {
       color: var(--main);
     }
