--- a/src/modules/register/presentation/pages/Register/styles.module.scss
+++ b/src/modules/register/presentation/pages/Register/styles.module.scss
@@ -3,10 +3,14 @@
 .main {
   background-color: var(--background-light);
   position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
+  inset: 0;
+  min-height: auto;
+  overflow-y: scroll;
+  padding: 3rem;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
   .container {
     width: 30rem;
@@ -41,6 +45,11 @@
           width: 100%;
           font-size: 13px;
           border-radius: 5px;
+        }
+
+        .error {
+          color: var(--red);
+          font-size: .9rem;
         }
 
         .email {
