--- a/src/shared/presentation/components/Search/styles.module.scss
+++ b/src/shared/presentation/components/Search/styles.module.scss
@@ -8,6 +8,7 @@
   -webkit-box-shadow: 0px 8px 24px 0px rgba(66, 68, 90, 1);
   -moz-box-shadow: 0px 8px 24px 0px rgba(66, 68, 90, 1);
   box-shadow: 0px 8px 24px 0px rgba(66, 68, 90, 1);
+  overflow-y: scroll;
 
   header {
     display: flex;
