--- a/src/modules/account/presentation/pages/AccountArticles/styles.module.scss
+++ b/src/modules/account/presentation/pages/AccountArticles/styles.module.scss
@@ -1,3 +1,25 @@
 .main {
-  min-height: calc(100vh - 11rem);
+  width: 100%;
+  padding: 0 2rem;
+
+  table {
+    width: 100%;
+
+    thead {
+      tr {
+        th {
+          padding: 0.5rem;
+          background: var(--background-element);
+
+          &:first-child {
+            border-radius: 7px 0 0 7px;
+          }
+
+          &:last-child {
+            border-radius: 0 7px 7px 0;
+          }
+        }
+      }
+    }
+  }
 }
