--- a/src/shared/presentation/components/NavComponent/styles.module.scss
+++ b/src/shared/presentation/components/NavComponent/styles.module.scss
@@ -3,23 +3,34 @@
 .nav {
   width: 100%;
   height: 3rem;
-  display: flex;
-  justify-content: space-between;
-  align-content: center;
-  align-items: center;
   padding: 0 20px;
   box-sizing: border-box;
   border-bottom: 1px solid var(--background-line);
   background-color: var(--background-element);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
-  .buttons_wrapper {
-    a {
-      button {
-        @include button(false);
-      }
-      .button2 {
-        @include button();
-        margin-left: 10px;
+  .wrapper {
+    max-width: 1920px;
+    padding: 0;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    align-content: center;
+    align-items: center;
+    width: 100%;
+
+    .buttons_wrapper {
+      a {
+        button {
+          @include button(false);
+        }
+
+        .button2 {
+          @include button();
+          margin-left: 10px;
+        }
       }
     }
   }
@@ -41,38 +52,52 @@
   border-bottom: 1px solid var(--background-line);
   z-index: 100;
 
-  h1 {
-    margin: 0;
-    padding: 0;
-    height: fit-content;
-  }
-
-  .buttons_wrapper {
+  .wrapper {
+    max-width: 1920px;
+    width: 100%;
     display: flex;
     justify-content: space-between;
-    gap: 5px;
     align-items: center;
+    margin: 0 auto;
 
-    button {
-      border: 1px solid var(--main);
-      font-family: 'Oswald', sans-serif;
-      border-radius: 10px;
-      font-size: 16px;
-      padding: 3px 7px;
-      box-sizing: border-box;
-      color: var(--background-element);
-      background-color: var(--main);
-      cursor: pointer;
-      transition: background-color .1s ease-in-out;
-
-      &:hover {
-        color: var(--background-element);
-        background-color: var(--darkMain);
-      }
+    h1 {
+      margin: 0;
+      padding: 0;
+      height: fit-content;
     }
 
+    .buttons_wrapper {
+      display: flex;
+      justify-content: space-between;
+      gap: 5px;
+      align-items: center;
+
+      button {
+        border: 1px solid var(--main);
+        font-family: 'Oswald', sans-serif;
+        border-radius: 10px;
+        font-size: 16px;
+        padding: 3px 7px;
+        box-sizing: border-box;
+        color: var(--background-element);
+        background-color: var(--main);
+        cursor: pointer;
+        transition: background-color .1s ease-in-out;
+
+        &:hover {
+          color: var(--background-element);
+          background-color: var(--darkMain);
+        }
+      }
+
+    }
   }
 
+}
+.wrapper {
+  max-width: 1920px;
+  width: 100%;
+  margin: 0 auto;
 }
 
 .footer {
@@ -88,28 +113,23 @@
   border-top: 1px solid var(--background-line);
   background-color: var(--background-element);
 
-  div {
+  .wrapper {
+    width: 100%;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    gap: 10px;
-  }
+    max-width: 1920px;
+    margin: 0 auto;
 
-  button {
-    border: 1px solid var(--main);
-    font-family: 'Oswald', sans-serif;
-    border-radius: 10px;
-    font-size: 16px;
-    padding: 3px 7px;
-    box-sizing: border-box;
-    color: var(--background-element);
-    background-color: var(--main);
-    cursor: pointer;
-    transition: background-color .1s ease-in-out;
+    div {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 10px;
+    }
 
-    &:hover {
-      color: var(--background-element);
-      background-color: var(--darkMain);
+    button {
+      @include button();
     }
   }
 }
