--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -9,6 +9,8 @@
   --gray-text: #6b6b6b;
   --background-highlight: #a8a8a8;
   --red: #ef4636;
+  --banner: #4b9d07;
+  --banner-link: #0049ff;
 }
 
 @media (prefers-color-scheme: dark) {
