--- a/src/modules/article/presentation/pages/Article/styles.module.scss
+++ b/src/modules/article/presentation/pages/Article/styles.module.scss
@@ -3,10 +3,8 @@
   min-height: calc(100vh - 11rem);
 
   .image {
-    width: 100%;
-    height: 25rem;
-    background-repeat: no-repeat;
-    background-size: cover;
+    object-fit: cover;
+    max-height: 130vh;
   }
 
   .title {
