--- a/src/modules/register/presentation/pages/Register/styles.module.scss
+++ b/src/modules/register/presentation/pages/Register/styles.module.scss
@@ -13,7 +13,7 @@
   align-items: center;
 
   .container {
-    width: 30rem;
+    max-width: 30rem;
     background-color: var(--background);
     position: relative;
     top: 50%;
@@ -22,6 +22,11 @@
     border-radius: 15px;
     padding: 30px 15px;
     box-sizing: border-box;
+
+    @media only screen and (max-width: 30rem) {
+      position: absolute;
+      inset: 0;
+    }
 
     h2 {
       text-align: center;
