--- a/src/modules/upload/presentation/pages/Upload/styles.module.scss
+++ b/src/modules/upload/presentation/pages/Upload/styles.module.scss
@@ -4,6 +4,10 @@
   margin: 2rem 4rem;
   max-width: 200rem;
 
+  @media only screen and (max-width: 50rem) {
+    margin: 2rem 0;
+  }
+
   form {
     .title {
       all: unset;
