--- a/src/shared/presentation/components/NavComponent/styles.module.scss
+++ b/src/shared/presentation/components/NavComponent/styles.module.scss
@@ -64,6 +64,10 @@
       margin: 0;
       padding: 0;
       height: fit-content;
+
+      @media only screen and (max-width: 450px) {
+        display: none;
+      }
     }
 
     .buttons_wrapper {
