--- a/src/shared/presentation/components/Search/styles.module.scss
+++ b/src/shared/presentation/components/Search/styles.module.scss
@@ -33,7 +33,9 @@
       border: none;
       border-bottom: 2px solid var(--background-line);
       outline: none;
-      width: 32rem;
+      width: 100%;
+      margin: .5rem;
+      max-width: 32rem;
       font-size: 2.6rem;
       padding: 0.6rem 0;
       box-sizing: border-box;
