--- a/src/modules/home/presentation/components/ArticleClip/styles.module.scss
+++ b/src/modules/home/presentation/components/ArticleClip/styles.module.scss
@@ -8,7 +8,7 @@
   height: 4.5rem;
   padding: 8px 0;
   box-sizing: border-box;
-  box-shadow: #e3e3e3 4px 4px 20px 0;
+  box-shadow: var(--background-highlight) 4px 4px 20px 0;
   transition: transform .1s ease-in-out;
 
   &:hover {
