--- a/src/modules/home/presentation/pages/Home/styles.module.scss
+++ b/src/modules/home/presentation/pages/Home/styles.module.scss
@@ -47,7 +47,7 @@ main {
         background-size: cover;
         color: #fff;
         font-family: 'Poppins', sans-serif;
-        padding: 3rem 0;
+        padding: 3rem 1rem;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
@@ -77,10 +77,11 @@ main {
           font-size: 25px;
           font-weight: 500;
           text-align: center;
-          background-color: #fff;
+          background-color: var(--background);
           padding: 1rem;
           width: fit-content;
           transition: transform .1s ease-in-out;
+          border-radius: 3px;
 
           &:hover {
             text-decoration: underline;
