--- a/src/modules/home/presentation/pages/Home/styles.module.scss
+++ b/src/modules/home/presentation/pages/Home/styles.module.scss
@@ -34,7 +34,7 @@ main {
       flex-basis: 75%;
       display: grid;
       gap: 30px 20px;
-      grid-template-columns: repeat(4, 1fr);
+      grid-template-columns: repeat(4, minmax(0, 1fr)) !important;
 
       .skeleton {
         width: 100%;
@@ -92,17 +92,17 @@ main {
       }
 
       @media only screen and (max-width: 90rem) {
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: repeat(3, minmax(0, 1fr));
       }
 
       @media only screen and (max-width: 68rem) {
         flex-basis: 60%;
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: repeat(2, minmax(0, 1fr));
       }
 
       @media only screen and (max-width: 50rem) {
         flex-basis:100%;
-        grid-template-columns: repeat(1, 1fr);
+        grid-template-columns: repeat(1, minmax(0, 1fr));
       }
     }
 
