--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,5 +1,5 @@
 :root {
-  --background: #fafafa;
+  --background: #efefef;
   --background-element: #fff;
   --background-line: #c0c0c0;
   --background-light: #e5e5e5;
@@ -15,7 +15,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0e0e0e;
+    --background: #1a1a1a;
     --background-element: #000000;
     --background-line: #c0c0c0;
     --background-light: #2c2c2c;
