--- a/src/modules/home/presentation/components/ArticleClip/styles.module.scss
+++ b/src/modules/home/presentation/components/ArticleClip/styles.module.scss
@@ -3,6 +3,7 @@
 }
 
 .box {
+  margin-top: 1rem;
   cursor: pointer;
   overflow: hidden;
   height: 4.5rem;
@@ -10,6 +11,7 @@
   box-sizing: border-box;
   box-shadow: var(--background-highlight) 4px 4px 20px 0;
   transition: transform .1s ease-in-out;
+  background-color: var(--background-element);
 
   &:hover {
     transform: scale(1.05);
