--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -11,12 +11,14 @@
   --red: #ef4636;
   --banner: #4b9d07;
   --banner-link: #0049ff;
+  --green: #4b9d07;
+  --yellow: #e3bc1d;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #1a1a1a;
-    --background-element: #000000;
+    --background-element: #090909;
     --background-line: #c0c0c0;
     --background-light: #2c2c2c;
     --main: #3e72f6;
