--- a/src/modules/login/presentation/pages/Login/styles.module.scss
+++ b/src/modules/login/presentation/pages/Login/styles.module.scss
@@ -14,6 +14,7 @@
 
   .container {
     max-width: 30rem;
+    width: 100%;
     background-color: var(--background);
     border-radius: 15px;
     padding: 30px 15px;
