--- a/src/modules/register/presentation/pages/Register/styles.module.scss
+++ b/src/modules/register/presentation/pages/Register/styles.module.scss
@@ -15,10 +15,7 @@
   .container {
     max-width: 30rem;
     background-color: var(--background);
-    position: relative;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    width: 100%;
     border-radius: 15px;
     padding: 30px 15px;
     box-sizing: border-box;
